Project1/force-app/main/default/objects/Shop_Duty__c/Shop_Duty__c.object-meta.xml
<CustomObject>
    <label>Shop Duty</label>
    <nameField>
        <label>Duty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Duties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>