Project1/force-app/main/default/objects/Shop_Duty__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if this is an active routinely scheduled activity. Uncheck if no longer used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>