Project1/force-app/main/default/objects/Shop_Duty__c/fields/Assigned_Employee__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>