Project1/force-app/main/default/objects/Shop_Duty__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the duty</description>
    <inlineHelpText>a short description of the duty requirements</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>