Project1/force-app/main/default/objects/Shop_Duty__c/fields/Duration_Interval__c.field-meta.xml
<CustomField>
    <fullName>Duration_Interval__c</fullName>
    <description>How long to complete the activity each time.</description>
    <inlineHelpText>For how long to complete the activity each time.</inlineHelpText>
    <label>How Long To Do It Each Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>