Project1/force-app/main/default/objects/Shop_Duty__c/fields/Duration_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>Duration_Time_Unit__c</fullName>
    <description>How long to complete the activity each time.</description>
    <inlineHelpText>How long will the activity take to complete?</inlineHelpText>
    <label>Duration Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>