Project1/force-app/main/default/objects/Shop_Duty__c/fields/Duty_Days__c.field-meta.xml
<CustomField>
    <fullName>Duty_Days__c</fullName>
    <defaultValue>&apos;Monday;Tuesday;Wednesday;Thursday;Friday;Saturday;Sunday&apos;</defaultValue>
    <description>Days that the duty needs to be completed</description>
    <label>Duty Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
                <default>true</default>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>