Project1/force-app/main/default/objects/Shop_Duty__c/fields/Frequency_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many times does the task need to be performed each time?</description>
    <inlineHelpText>How many times does the task need to be performed each time (e.g. 1 x)?</inlineHelpText>
    <label>Number of Times To Do It Each Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>