Project1/force-app/main/default/objects/Shop_Duty__c/fields/Time_Interval_Before_Repeat__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval_Before_Repeat__c</fullName>
    <description>How much time before duty needs to be repeated?</description>
    <inlineHelpText>How much time between tasks before it needs to repeat? (example, every 30 Min)</inlineHelpText>
    <label>Time Interval Before Repeat</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>