Project1/force-app/main/default/objects/Shop_Duty__c/fields/Time_Interval_Units__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval_Units__c</fullName>
    <description>Interval Unit of Time</description>
    <inlineHelpText>How long before the task has to be repeated (example, every 30 minutes, every hour)</inlineHelpText>
    <label>Time Interval Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>